Archive2/22/7722931bf5bc51/output
main.cpp:1:1: error: 'Intent' does not name a type
 Intent intent = new Intent(Intent.ACTION_SEND);
 ^
main.cpp:2:1: error: 'intent' does not name a type
 intent.setType("plain/text");
 ^
main.cpp:3:1: error: 'intent' does not name a type
 intent.putExtra(Intent.EXTRA_EMAIL, new String[] { "some@email.address" });
 ^
main.cpp:3:74: error: expected unqualified-id before ')' token
 intent.putExtra(Intent.EXTRA_EMAIL, new String[] { "some@email.address" });
                                                                          ^
main.cpp:4:1: error: 'intent' does not name a type
 intent.putExtra(Intent.EXTRA_SUBJECT, "subject");
 ^
main.cpp:5:1: error: 'intent' does not name a type
 intent.putExtra(Intent.EXTRA_TEXT, "mail body");
 ^
main.cpp:6:14: error: expected constructor, destructor, or type conversion before '(' token
 startActivity(Intent.createChooser(intent, ""));
              ^
